--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Totty</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="paralax">
+            <div class="img">
+                <img src="imagens/totty-letras.png" alt="Logo-Totty" class="img-letras">
+            </div>
+        </section>
+
+        <section class="animacao">
+            <div class="part1">
+                <h1 class="titulo1">Quem é Totty ?</h1>
+                <h2 class="titulo2">Nesta pagina você conhecera um pouco dessse lindão 😍.</h2>
+            </div>
+
+            <div class="anima">
+                <img src="imagens/face-totty.jpg" alt="Face Totty">
+            </div>
+        </section>
+
+        <section class="video">
+            <div class="texto1">
+                <h1 class="titulo-texto1">Vamos começar por um vídeo</h1>
+                <p>nesse vídeo ele ainda tinha os pelos curtos e era bem chatinho, tinha essse costume de ficar mordendo</p>
+                <p>Fazia poucos dias que ele estava comigo, quando chegou era um amorzinho</p>
+            </div>
+
+            <div class="videoo">
+                <video src="imagens/VID_20180913_121025411.mp4" controls  muted loop></video>
+            </div>
+        </section>
+
+        <section class="roupa">
+            <div class="part2">
+                <p>Nessa foto foi a primeira roupinha que ele ganhou, ficava todo empolgado quando ia vesti-la</p>
+            </div>
+
+            <div class="roupa2"></div>
+        </section>
+
+        <section class="curioso1">
+            <div class="part3">
+                <p>
+                    As vezes quando ele esta sentado olhando para o "nada", se vc falar sussurrando ele fará essa carinha de curioso 😆
+                </p>
+            </div>
+
+            <div class="curioso2"></div>
+        </section>
+    </main>
 </body>
 </html>
