--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
         <section class="animacao">
             <div class="part1">
                 <h1 class="titulo1">Quem é Totty ?</h1>
-                <h2 class="titulo2">Nesta pagina você conhecera um pouco dessse lindão 😍.</h2>
+                <h2 class="titulo2">Nesta pagina você conhecerá um pouco dessse lindão 😍.</h2>
             </div>
 
-            <div class="anima">
-                <img src="imagens/face-totty.jpg" alt="Face Totty">
-            </div>
+            <div class="anima2"></div>
         </section>
 
         <section class="video">
             <div class="texto1">
                 <h1 class="titulo-texto1">Vamos começar por um vídeo</h1>
-                <p>nesse vídeo ele ainda tinha os pelos curtos e era bem chatinho, tinha essse costume de ficar mordendo</p>
-                <p>Fazia poucos dias que ele estava comigo, quando chegou era um amorzinho</p>
+                <p>Nesse vídeo ele ainda tinha os pelos curtos e era bem chatinho, tinha essse costume de ficar mordendo.</p>
+                <p>Fazia poucos dias que ele estava comigo, quando chegou era um amorzinho.</p>
             </div>
 
             <div class="videoo">
@@ -39,7 +37,7 @@
 
         <section class="roupa">
             <div class="part2">
-                <p>Nessa foto foi a primeira roupinha que ele ganhou, ficava todo empolgado quando ia vesti-la</p>
+                <p>Nessa foto foi a primeira roupinha que ele ganhou, ficava todo empolgado quando ia vesti-la.</p>
             </div>
 
             <div class="roupa2"></div>
@@ -48,11 +46,40 @@
         <section class="curioso1">
             <div class="part3">
                 <p>
-                    As vezes quando ele esta sentado olhando para o "nada", se vc falar sussurrando ele fará essa carinha de curioso 😆
+                    As vezes quando ele esta sentado olhando para o "nada", se vc falar sussurrando ele fará essa carinha de curioso 😆.
                 </p>
             </div>
 
             <div class="curioso2"></div>
+        </section>
+
+        <section class="dormindo1">
+            <div class="part4">
+                <p>Aqui vai uma curiosidade, na hora de dormir a cama é dele 😂.</p>
+                <p>como da para ver na foto ele é só um pouquinho espaçoso 😂.</p>
+            </div>
+
+            <div class="dormindo2"></div>
+        </section>
+
+        <section class="banho1">
+            <div class="part5">
+                <p>Essa foto mostra sua primeira vez no banho e tosa, cheiroso e lindo.</p>
+            </div>
+
+            <div class="banho2"></div>
+        </section>
+
+        <section class="menine1">
+            <div class="part6">
+                <p>Como vocês perceberam ele é bem "dengoso", nessa foto vocês vão entender o porque.</p>
+                <p>Enquando sua mãe se maqueia, acabou transformando ele em um menine</p>
+
+            </div><div class="menine2"></div>
+        </section>
+
+        <section class="final">
+            <h1 class="final-titulo">Agradeço a todos, espero que tenham gostado de ter conhecido um pouco desse principe</h1>
         </section>
     </main>
 </body>
