--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="anima2"></div>
         </section>
 
-        <section class="video">
+        <section class="videu">
             <div class="texto1">
                 <h1 class="titulo-texto1">Vamos começar por um vídeo</h1>
                 <p>Nesse vídeo ele ainda tinha os pelos curtos e era bem chatinho, tinha essse costume de ficar mordendo.</p>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="videoo">
-                <video src="imagens/VID_20180913_121025411.mp4" controls  muted loop></video>
+                <video src="imagens/VID_20180913_121025411.mp4" controls  muted autoplay loop></video>
             </div>
         </section>
 
