finalizando para teste

--- a/index.html
+++ b/index.html
@@ -35,47 +35,57 @@
             </div>
         </section>
 
-        <section class="roupa">
+        <section class="all">
             <div class="part2">
                 <p>Nessa foto foi a primeira roupinha que ele ganhou, ficava todo empolgado quando ia vesti-la.</p>
             </div>
 
-            <div class="roupa2"></div>
+            <div class="roupa2">
+                <img src="imagens/roupa-totty.jpg" alt="Totty roupa" class="geral">
+            </div>
         </section>
 
-        <section class="curioso1">
+        <section class="all">
             <div class="part3">
                 <p>
                     As vezes quando ele esta sentado olhando para o "nada", se vc falar sussurrando ele fará essa carinha de curioso 😆.
                 </p>
             </div>
 
-            <div class="curioso2"></div>
+            <div class="curioso2">
+                <img src="imagens/totty-curioso.jpg" alt="Totty curioso" class="geral">
+            </div>
         </section>
 
-        <section class="dormindo1">
+        <section class="all">
             <div class="part4">
-                <p>Aqui vai uma curiosidade, na hora de dormir a cama é dele 😂.</p>
-                <p>como da para ver na foto ele é só um pouquinho espaçoso 😂.</p>
+                <p>Aqui vai uma curiosidade, na hora de dormir a cama é dele 😂 <br>
+                Como da para ver na foto ele é só um pouquinho espaçoso 😂.</p>
             </div>
 
-            <div class="dormindo2"></div>
+            <div class="dormindo2">
+                <img src="imagens/dormindo sexy-350px.jpg" alt="Dormindo" class="geral">
+            </div>
         </section>
 
-        <section class="banho1">
+        <section class="all">
             <div class="part5">
                 <p>Essa foto mostra sua primeira vez no banho e tosa, cheiroso e lindo.</p>
             </div>
 
-            <div class="banho2"></div>
+            <div class="banho2">
+                <img src="imagens/banho-e-tosa.jpg" alt="Banho" class="geral">
+            </div>
         </section>
 
-        <section class="menine1">
+        <section class="all">
             <div class="part6">
                 <p>Como vocês perceberam ele é bem "dengoso", nessa foto vocês vão entender o porque.</p>
                 <p>Enquando sua mãe se maqueia, acabou transformando ele em um menine</p>
 
-            </div><div class="menine2"></div>
+            </div><div class="menine2">
+                <img src="imagens/totty-menine.jpg" alt="Maquiando" class="geral">
+            </div>
         </section>
 
         <section class="final">
