espaço entre fotos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Fazia poucos dias que ele estava comigo, quando chegou era um amorzinho.</p>
             </div>
 
-            <div class="videoo">
+            <div class="part">
                 <video src="imagens/VID_20180913_121025411.mp4" controls  muted autoplay loop></video>
             </div>
         </section>
@@ -40,7 +40,7 @@
                 <p>Nessa foto foi a primeira roupinha que ele ganhou, ficava todo empolgado quando ia vesti-la.</p>
             </div>
 
-            <div class="roupa2">
+            <div class="part">
                 <img src="imagens/roupa-totty.jpg" alt="Totty roupa" class="geral">
             </div>
         </section>
@@ -52,7 +52,7 @@
                 </p>
             </div>
 
-            <div class="curioso2">
+            <div class="part">
                 <img src="imagens/totty-curioso.jpg" alt="Totty curioso" class="geral">
             </div>
         </section>
@@ -63,7 +63,7 @@
                 Como da para ver na foto ele é só um pouquinho espaçoso 😂.</p>
             </div>
 
-            <div class="dormindo2">
+            <div class="part">
                 <img src="imagens/dormindo sexy-350px.jpg" alt="Dormindo" class="geral">
             </div>
         </section>
@@ -73,7 +73,7 @@
                 <p>Essa foto mostra sua primeira vez no banho e tosa, cheiroso e lindo.</p>
             </div>
 
-            <div class="banho2">
+            <div class="part">
                 <img src="imagens/banho-e-tosa.jpg" alt="Banho" class="geral">
             </div>
         </section>
@@ -82,8 +82,9 @@
             <div class="part6">
                 <p>Como vocês perceberam ele é bem "dengoso", nessa foto vocês vão entender o porque.</p>
                 <p>Enquando sua mãe se maqueia, acabou transformando ele em um menine</p>
-
-            </div><div class="menine2">
+            </div>
+            
+            <div class="part">
                 <img src="imagens/totty-menine.jpg" alt="Maquiando" class="geral">
             </div>
         </section>
