--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="animacao">
             <div class="part1">
                 <h1 class="titulo1">Quem é Totty ?</h1>
-                <h2 class="titulo2">Nesta pagina você conhecerá um pouco dessse lindão 😍.</h2>
+                <h2 class="titulo2">Nesta pagina você conhecerá um pouco desse lindão 😍.</h2>
             </div>
 
             <div class="anima2"></div>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="part">
-                <video src="imagens/VID_20180913_121025411.mp4" controls  muted autoplay loop></video>
+                <video src="imagens/VID_20180913_121025411.mp4" id="vidio" controls  muted autoplay loop></video>
             </div>
         </section>
 
@@ -59,7 +59,7 @@
 
         <section class="all">
             <div class="part4">
-                <p>Aqui vai uma curiosidade, na hora de dormir a cama é dele 😂 <br>
+                <p>Aqui vai uma curiosidade, na hora de dormir a cama é dele 😂 <br><br>
                 Como da para ver na foto ele é só um pouquinho espaçoso 😂.</p>
             </div>
 
